[REFACTOR] finish refactor code